--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,5 +1,5 @@
 APP_DISPLAY_NAME = FreeAPS X
-BUILD_VERSION = 0.2.6.15 bob-xdrip_left-right
+BUILD_VERSION = 0.2.6.16 bob-xdrip_l-r_mw_preferences
 DEVELOPER_TEAM = ##TEAM_ID##
 BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPS
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
