--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,5 +1,5 @@
 APP_DISPLAY_NAME = FreeAPS X
-BUILD_VERSION = 0.2.6.16 bob-xdrip_l-r_mw_preferences
+BUILD_VERSION = 0.2.6.17 dISF + dCR
 DEVELOPER_TEAM = ##TEAM_ID##
 BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPS
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
