--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,5 +1,5 @@
 APP_DISPLAY_NAME = FreeAPS X
-BUILD_VERSION = 0.2.7.1_Dynamic_TDD
+BUILD_VERSION = 0.2.7.2_Dynamic_TDD_adj_basal
 DEVELOPER_TEAM = ##TEAM_ID##
 BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPS
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
