--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,5 +1,5 @@
 APP_DISPLAY_NAME = FreeAPS X
-APP_VERSION = 0.2.8.65_bo_updated_stats_again+loop_stats_NS_upload
+APP_VERSION = 0.2.8.67_bo_updated_stats_again+loop_stats_NS_upload+oref0_fix(lib/iob)
 APP_BUILD_NUMBER = 1
 BRANCH = bo
 DEVELOPER_TEAM = ##TEAM_ID##
