--- a/.github/workflows/build_FAX.yml
+++ b/.github/workflows/build_FAX.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Patch Match Tables
         run: find /usr/local/lib/ruby/gems -name table_printer.rb | xargs sed -i "" "/puts(Terminal::Table.new(params))/d"
       
-      # Build signed Loop IPA file
+      # Build signed FreeAPS X IPA file
       - name: Fastlane Build & Archive
-        run: fastlane build_loop
+        run: fastlane build_fax
         env:
           TEAMID: ${{ secrets.TEAMID }}
           GH_PAT: ${{ secrets.GH_PAT }}
