--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -3,7 +3,7 @@ APP_VERSION = 0.2.9
 APP_BUILD_NUMBER = 2
 COPYRIGHT_NOTICE = fastlane + display of branch etc in settings
 DEVELOPER_TEAM = ##TEAM_ID##
-BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPS
+BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPSdev
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
 APP_ICON = AppIcon
 
