--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,4 +1,4 @@
-APP_DISPLAY_NAME = FreeAPS X
+APP_DISPLAY_NAME = FAX_dev
 APP_VERSION = 0.2.9
 APP_BUILD_NUMBER = 2
 COPYRIGHT_NOTICE = fastlane + display of branch etc in settings
