--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,7 +1,7 @@
 APP_DISPLAY_NAME = FAX_dev
-APP_VERSION = 0.2.9
+APP_VERSION = 0.2.10
 APP_BUILD_NUMBER = 2
-COPYRIGHT_NOTICE = fastlane + display of branch etc in settings
+COPYRIGHT_NOTICE = Remove dISF from UAM pred
 DEVELOPER_TEAM = ##TEAM_ID##
 BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPSdev
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
