--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,11 +1,11 @@
-APP_DISPLAY_NAME = FreeAPS X
+APP_DISPLAY_NAME = FAX-bdb
 APP_VERSION = 0.6.4
 APP_BUILD_NUMBER = 1
 COPYRIGHT_NOTICE = 
 DEVELOPER_TEAM = ##TEAM_ID##
-BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPS
+BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPSbdb
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
-APP_ICON = AppIcon
+APP_ICON = AppIcon_BW
 
 #include? "ConfigOverride.xcconfig"
 #include? "../../ConfigOverride.xcconfig"
