--- a/.github/workflows/build_FAX.yml
+++ b/.github/workflows/build_FAX.yml
@@ -2,7 +2,7 @@ name: Build FAX
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 17 * */2 *' # Runs at 17:00 UTC every day in Jan, Mar, May, Jul, Sep and Nov.
+    - cron: '0 17 1 */2 *' # Runs at 17:00 UTC on the 1st in Jan, Mar, May, Jul, Sep and Nov.
 
 jobs:
   build:
