--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,7 +1,7 @@
 APP_DISPLAY_NAME = FreeAPS X
-APP_VERSION = 0.2.9
-APP_BUILD_NUMBER = 2
-COPYRIGHT_NOTICE = fastlane + display of branch etc in settings
+APP_VERSION = 0.2.10
+APP_BUILD_NUMBER = 1
+COPYRIGHT_NOTICE = - Remove dISF from UAM pred, CR/target changes
 DEVELOPER_TEAM = ##TEAM_ID##
 BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPS
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
