--- a/.github/workflows/build_FAX.yml
+++ b/.github/workflows/build_FAX.yml
@@ -1,11 +1,18 @@
-name: Build FAX
+name: 4. Build FAX
+run-name: Build FAX
 on:
   workflow_dispatch:
   schedule:
     - cron: '0 17 1 */2 *' # Runs at 17:00 UTC on the 1st in Jan, Mar, May, Jul, Sep and Nov.
 
+
 jobs:
+  secrets:
+    uses: ./.github/workflows/validate_secrets.yml
+    secrets: inherit
+
   build:
+    needs: secrets
     runs-on: macos-12
     steps:
       # Uncomment to manually select latest Xcode if needed
